tests/language_modules/08_routines/valid/procedure_minimal.vf
module ProcedureMinimal

procedure main()
is
    check true
end main

end ProcedureMinimal