tests/language_modules/08_routines/invalid_semantics/duplicate_routine_name.vf
module DuplicateRoutineName

procedure main()
is
    check true
end main

function main() returns Integer
is
    return 1
end main

end DuplicateRoutineName